--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <span class="name">Tasks</span>
                 </div>
                 <div class="container-left-item hover">
-                    <a href="/todo-list.html">
+                    <a href="./todo-list.html">
                         <i class="icon fa-solid fa-book"></i>
                         <span class="name">Notebooks</span>
                     </a>
