--- a/todo-list.html
+++ b/todo-list.html
@@ -27,7 +27,7 @@
                     <i class="down fa-solid fa-angle-down"></i>
                 </div>
                 <div class="container-left-item hover">
-                    <a href="/index.html">
+                    <a href="./index.html">
                         <i class="icon fa-solid fa-house"></i>
                     <span class="name">Home</span>
                     </a>
@@ -45,7 +45,7 @@
                     <span class="name">Tasks</span>
                 </div>
                 <div class="container-left-item hover">
-                    <a href="/todo-list.html">
+                    <a href="./todo-list.html">
                         <i class="icon fa-solid fa-book"></i>
                         <span class="name">Notebooks</span>
                     </a>
